[metadata]
name = robothoodash
description = A dashboard which monitors the performances of RobotHood
long_description = file: README.md
license = PRIVATE
author = Maxime Caïtucoli
author_email = maxime.caitucoli@live.fr
provides = robothoodash
url = https://github.com/etnberz/robothoodash
download_url =
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9
	Private :: Do Not Upload On Pypi

[options]
zip_safe = False
python_requires = >=3.9, <3.10
packages = find:
include_package_data = True
install_requires =
    dash~=2.9.3
    dash-bootstrap-components~=1.4.1
    duckdb~=0.8.0
    pandas~=2.0.1

[options.extras_require]
tests =
	pytest~=6.0.0
	pytest-mock~=3.2.0

[options.packages.find]
exclude = tests

[bdist_wheel]
universal = 1
